add visitation map

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -23,3 +23,6 @@
             <p>No news so far...</p>
           {%- endif %} 
           </div>
+          <div>
+            <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=izgeQ-lNRB4gPFKjBMQ1YKNbQBLbTDBsXaj7GCNMDV4&cl=ffffff&w=a"></script>
+          </div>
