update visitor map location

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,6 +42,9 @@ layout: default
             {%- include selected_papers.html %}
           {%- endif %}
           {%- if page.social %}
+          <div>
+            <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=izgeQ-lNRB4gPFKjBMQ1YKNbQBLbTDBsXaj7GCNMDV4&cl=ffffff&w=a"></script>
+          </div>
           <!-- Social -->
           <div class="social">
             <div class="contact-icons">
