--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -43,8 +43,7 @@ layout: default
           {%- endif %}
           {%- if page.social %}
           <div>
-            <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=izgeQ-lNRB4gPFKjBMQ1YKNbQBLbTDBsXaj7GCNMDV4'></script>
-<!--             <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=izgeQ-lNRB4gPFKjBMQ1YKNbQBLbTDBsXaj7GCNMDV4&cl=ffffff&w=a"></script> -->
+            <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=izgeQ-lNRB4gPFKjBMQ1YKNbQBLbTDBsXaj7GCNMDV4&cl=ffffff&w=a"></script>
           </div>
           <!-- Social -->
           <div class="social">
