update viewcount on map

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -43,7 +43,7 @@ layout: default
           {%- endif %}
           {%- if page.social %}
           <div>
-            <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=izgeQ-lNRB4gPFKjBMQ1YKNbQBLbTDBsXaj7GCNMDV4&cl=ffffff&w=a"></script>
+            <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=izgeQ-lNRB4gPFKjBMQ1YKNbQBLbTDBsXaj7GCNMDV4&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
           </div>
           <!-- Social -->
           <div class="social">
